# libpeer

./: .gitignore  .gitmodules  CMakeLists.txt  idf_component.yml
examples/esp32_i2smic2browser/: README.md  build_log.txt  sdkconfig.defaults  sdkconfig.defaults.esp32s3
examples/esp32_i2smic2browser/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  audio.c  camera.c  idf_component.yml
examples/esp32_i2smic2browser/signaling/: README.md  index.html  package-lock.json  signaling_server.js
examples/generic/: CMakeLists.txt
examples/pico/: CMakeLists.txt
include/: agent.h  config.h  dtls_srtp.h  peer_connection.h  sctp.h  stun.h  turn.h
src/: CMakeLists.txt  address.c  agent.c  dtls_srtp.c  ice.c  peer_connection.c  sctp.c  ssl_transport.c  stun.c  turn.c
tests/: CMakeLists.txt
